--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "dev": "slidev",
-    "build": "slidev build",
-    "deploy": "npm run build && npx gh-pages -d dist"
+    "build": "slidev build"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "devDependencies": {
+    "slidev": "^0.47.0"
   },
   "dependencies": {
     "vite": "^7.2.2"
