--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy Slidev to GitHub Pages
 on:
   push:
     branches:
-      - main  # déploie à chaque push sur la branche principale
+      - main
 
 permissions:
-  contents: write  # nécessaire pour pousser sur gh-pages
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -25,7 +25,7 @@ jobs:
         run: npm ci || npm install
 
       - name: Build Slidev site
-        run: slidev build
+        run: npx slidev build
 
       - name: Add CNAME for custom domain
         run: echo "www.lakhdari.fr" > dist/CNAME
