--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
+    "dev": "slidev",
     "build": "slidev build"
   },
   "devDependencies": {
-    "slidev": "^0.47.0"
+    "@slidev/cli": "^0.47.0"
   }
 }
